# gorge2

./: .gitignore  CMakeLists.txt  Makefile  README.md
android/: build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml  CMakeLists.txt
android/app/src/main/java/com/twobit/gorge/: Lib.java  MainActivity.java  MainView.java
android/app/src/main/res/values/: ids.xml  strings.xml  styles.xml
android/gradle/wrapper/: gradle-wrapper.properties
sprites/: gen-atlas.py
src/: app.cpp  app.hpp  audio.cpp  audio.hpp  background.cpp  background.hpp  blockade_enemy.cpp  blockade_enemy.hpp  bump.cpp  bump.hpp  cannon_enemy.cpp  cannon_enemy.hpp  debug_renderer.hpp  enemy.cpp  enemy.hpp  foo.cpp  foo.hpp  fx.cpp  fx.hpp  gfx.cpp  gfx.hpp  item.cpp  item.hpp  log.hpp  main.cpp  particle.cpp  particle.hpp  player.cpp  player.hpp  populator.cpp  populator.hpp  random.hpp  renderer2d.hpp  resource.cpp  resource.hpp  ring_enemy.cpp  ring_enemy.hpp  rocket_enemy.cpp  rocket_enemy.hpp  saucer_enemy.cpp  (+17 more)
